# QtProject-Monopoly

./: .gitignore  CMakeLists.txt  QtProject-Monopoly.pro  eventwatcher.cpp  fonts.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  startmenu.cpp  startmenu.h  stylizedbutton.cpp  stylizedbutton.h
headers/: block.h  bot.h  cardview.h  dice.h  eventview.h  eventwatcher.h  gameinitial.h  mainloop.h  mainwindow.h  map.h  player.h  playersymbol.h  playerview.h  startmenu.h  stylizedbutton.h  stylizedspinbox.h
sources/: Dice.cpp  block.cpp  cardview.cpp  dice.cpp  eventview.cpp  eventwatcher.cpp  gameinitial.cpp  main.cpp  mainloop.cpp  mainwindow.cpp  map.cpp  player.cpp  playersymbol.cpp  playerview.cpp  startmenu.cpp  stylizedbutton.cpp  stylizedspinbox.cpp
